[package]
name = "trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Matrix SDK and directly-related tools
matrix-sdk = { version = "0.7.0", features = ["e2e-encryption", "rustls-tls"], default-features = false }
anyhow = "1.0.79"
tokio = { version = "1.35.1", features = ["full"] }

# Miscellaneously-useful helpers
argh = "0.1.12"
directories = "5.0.1"
futures = "0.3.30"
rpassword = "7.3.1"
serde = "1.0.195"
serde_json = "1.0.111"
uuid = "1.6.1"
